--- a/styles.css
+++ b/styles.css
@@ -30,19 +30,20 @@ a {
     width: 258px;
 }
 
-#playbutton {
+#player {
     background-color: #333;
     color: #efefef;
     border: 1px solid #efefef;
     border-radius: 20px;
     padding-left: 20px;
+    cursor: pointer;
 }
-#playbutton:hover {
+#player:hover {
     background-color: #efefef;
     color: #333;
     border: 1px solid #333;
 }
-#playbutton svg {
+#player svg {
     margin-bottom: 4px;
     margin-left: 7px;
 }
