Fix de hele boel op

--- a/src/components/Contactbar.astro
+++ b/src/components/Contactbar.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<nav class="mx-auto text-black bg-gray-100 p-2">
+<nav class="text-black bg-gray-100 p-2 flex justify-center">
   <ul class="flex flex-wrap">
     <li class="ml-1 mr-2">
       <a
