logo en programma eerder inladen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,6 +88,8 @@ const sponsors: Sponsor[] = [
         src={import("../../assets/img/logodinxperfm.png")}
         alt="DinxperFM logo"
         width={400}
+        loading="eager"
+        decoding="auto"
       />
       <p class="text-center mt-4">Het swingende geluid van Dinxperlo!</p>
     </div>
@@ -126,6 +128,8 @@ const sponsors: Sponsor[] = [
       src={import("../../public/programmering/2022-09-02.jpeg")}
       alt="DinxperFM programmering per 2022-09-02"
       width={1133}
+      loading="eager"
+      decoding="auto"
       class="mx-auto"
     />
     <a
