vaste breedte vd afbeeldingen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ const sponsors: Sponsor[] = [
 
 <DfmLayout>
   <div class="flex justify-evenly mt-20 mb-20">
-    <div class="max-w-sm">
+    <div class="max-w-sm" style="width:384px">
       <Picture
         src={import("../../assets/img/logodinxperfm.png")}
         alt="DinxperFM logo"
@@ -127,7 +127,7 @@ const sponsors: Sponsor[] = [
     </ul>
   </nav>
 
-  <div class="mt-10 text-center">
+  <div class="mt-10 text-center" style="width:1280px">
     <Picture
       src={import("../../public/programmering/2022-09-02.jpeg")}
       alt="DinxperFM programmering per 2022-09-02"
