minder witte bg flash

--- a/src/layouts/DfmLayout.astro
+++ b/src/layouts/DfmLayout.astro
@@ -19,6 +19,8 @@ import bgImage from "../../assets/img/dfm_studio-blurred.jpg";
     "background-image": `url(${bgImage.src})`,
     "background-size": "cover",
     "background-position": "center",
+    "background-color": "rgb(63,62,55)",
+    height: "100vh",
     color: "#efefef",
   }}
 >
