--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ const sponsors: Sponsor[] = [
 
 <DfmLayout>
   <div class="flex justify-evenly mt-20 mb-20">
-    <div class="max-w-sm" style="width:384px">
+    <div class="max-w-sm" style={{ width: "384px", height: "328px" }}>
       <Picture
         src={import("../../assets/img/logodinxperfm.png")}
         alt="DinxperFM logo"
@@ -102,14 +102,14 @@ const sponsors: Sponsor[] = [
 
   <nav class="flex justify-evenly bg-gray-100">
     <ul class="flex flex-wrap list-none pl-0 mb-0">
-      <li class="mr-2">
+      <li class="mr-2" style={{ "min-width": "117px" }}>
         <ButtonVideo
           title="Kijk naar Dinxper FM - Het swingende geluid van Dinxperlo!"
           label="Kijk live!"
           client:only="solid"
         />
       </li>
-      <li>
+      <li style={{ "min-width": "141px" }}>
         <ButtonAudio
           title="Luister naar Dinxper FM - Het swingende geluid van Dinxperlo!"
           label="Luister live!"
@@ -127,11 +127,13 @@ const sponsors: Sponsor[] = [
     </ul>
   </nav>
 
-  <div class="mt-10 text-center" style="width:1280px">
+  <div
+    class="mt-10 text-center"
+    style={{ "max-width": "1280px", "max-height": "754px" }}
+  >
     <Picture
       src={import("../../public/programmering/2022-09-02.jpeg")}
       alt="DinxperFM programmering per 2022-09-02"
-      width={1280}
       widths={[1280]}
       sizes={"100vw"}
       loading="eager"
