--- a/src/layouts/DfmLayout.astro
+++ b/src/layouts/DfmLayout.astro
@@ -4,37 +4,42 @@ import Contactbar from "../components/Contactbar.astro";
 import bgImage from "../../assets/img/dfm_studio-blurred.jpg";
 ---
 
-<title>Dinxper FM - het swingende geluid van Dinxperlo</title>
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-<meta name="msapplication-TileColor" content="#da532c" />
-<meta name="theme-color" content="#ffffff" />
-<meta name="viewport" content="width=device-width" />
-
-<body
-  style={{
-    "background-image": `url(${bgImage.src})`,
-    "background-size": "cover",
-    "background-position": "center",
-    "background-color": "rgb(63,62,55)",
-    height: "100vh",
-    color: "#efefef",
-  }}
->
-  <div
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Dinxper FM - het swingende geluid van Dinxperlo</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="viewport" content="width=device-width" />
+  </head>
+  <body
     style={{
-      background: "rgba(0, 0, 0, 0.75)",
-      height: "100%",
-      overflow: "auto",
+      "background-image": `url(${bgImage.src})`,
+      "background-size": "cover",
+      "background-position": "center",
+      "background-color": "rgb(63,62,55)",
+      height: "100vh",
+      color: "#efefef",
     }}
   >
-    <div class="max-w-7xl mx-auto">
-      <Contactbar />
-      <slot />
-      <Contactbar />
+    <div
+      style={{
+        background: "rgba(0, 0, 0, 0.75)",
+        height: "100%",
+        overflow: "auto",
+      }}
+    >
+      <div class="max-w-7xl mx-auto">
+        <Contactbar />
+        <slot />
+        <Contactbar />
+      </div>
     </div>
-  </div>
-</body>
+  </body>
+</html>
