--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,19 +125,17 @@ const sponsors: Sponsor[] = [
     </ul>
   </nav>
 
-  <div
-    class="mt-10 text-center"
-    style={{ "max-width": "1280px", "max-height": "754px" }}
-  >
+  <div class="mt-10 flex justify-center">
     <Picture
       src={import("../../public/programmering/2022-09-02.jpeg")}
       alt="DinxperFM programmering per 2022-09-02"
-      widths={[1280]}
-      sizes={"100vw"}
+      widths={[1133]}
+      sizes={"1133px"}
       loading="eager"
       decoding="auto"
-      class="mx-auto"
     />
+  </div>
+  <div class="text-center">
     <a
       target="blank"
       class="text-blue-400"
