Use solid-js to render UZG listing. first draft

--- a/src/components/Contactbar.astro
+++ b/src/components/Contactbar.astro
@@ -4,6 +4,9 @@
 <nav class="text-black bg-gray-100 p-2 flex justify-center">
   <ul class="flex flex-wrap">
     <li class="ml-1 mr-2">
+      <a href="/" title="DinxperFM home page">Home page</a>
+    </li>
+    <li class="ml-1 mr-2">
       <a
         href="https://www.facebook.com/DinxperFM"
         title="DinxperFM Facbook pagina"
