--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,7 +117,7 @@ const sponsors: Sponsor[] = [
       <li>
         <a
           class="inline-block mt-3 px-4 no-underline text-blue-700"
-          href="https://uitzendinggemist.dinxperfm.nl"
+          href="/uzg"
           title="">Uitzending gemist?</a
         >
       </li>
