Make uitzending gemist overview page

--- a/src/layouts/DfmLayout.astro
+++ b/src/layouts/DfmLayout.astro
@@ -8,11 +8,6 @@ import "@fontsource/cabin"
     background-image: var(--bgUrl)
   }
 </style>
-<style>
-  body {
-    font-family: 'Cabin', sans-serif;
-  }
-</style>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,7 +22,7 @@ import "@fontsource/cabin"
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width" />
   </head>
-  <body class="text-slate-50 h-screen bg-center bg-cover">
+  <body class="text-slate-50 h-screen bg-center bg-cover bg-fixed">
     <div class="h-100 overflow-auto bg-black/75">
       <div class="max-w-7xl mx-auto">
         <Contactbar />
