--- a/src/layouts/DfmLayout.astro
+++ b/src/layouts/DfmLayout.astro
@@ -3,13 +3,7 @@ import Contactbar from "../components/Contactbar.astro";
 import bgImage from "../../assets/img/dfm_studio-blurred.jpg";
 import "@fontsource/cabin"
 ---
-<style define:vars={{bgUrl: `url(${bgImage.src})`}}>
-  body {
-    background-image: var(--bgUrl)
-  }
-</style>
-<!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="UTF-8" />
     <title>Dinxper FM - het swingende geluid van Dinxperlo</title>
@@ -22,7 +16,7 @@ import "@fontsource/cabin"
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width" />
   </head>
-  <body class="text-slate-50 h-screen bg-center bg-cover bg-fixed">
+  <body class="text-slate-50 h-screen bg-center bg-cover bg-fixed font-[Cabin]">
     <div class="h-100 overflow-auto bg-black/75">
       <div class="max-w-7xl mx-auto">
         <Contactbar />
@@ -32,3 +26,8 @@ import "@fontsource/cabin"
     </div>
   </body>
 </html>
+<style define:vars={{bgUrl: `url(${bgImage.src})`}}>
+  body {
+    background-image: var(--bgUrl)
+  }
+</style>
