We can just filter with Boolean without needing to spec T[]

--- a/src/pages/uzg.astro
+++ b/src/pages/uzg.astro
@@ -84,7 +84,7 @@ const listing = ftpListing.map((value) => {
 });
 
 function only<T>(values: (T | undefined)[]): T[] {
-  return values.filter((value) => value) as T[];
+  return values.filter(Boolean);
 }
 
 const recordings: Recording[] = only(listing)
