--- a/src/layouts/DfmLayout.astro
+++ b/src/layouts/DfmLayout.astro
@@ -1,17 +1,38 @@
 ---
 import Contactbar from "../components/Contactbar.astro";
 import bgImage from "../../assets/img/dfm_studio-blurred.jpg";
-import "@fontsource/cabin"
+import "@fontsource/cabin";
+
+const BASE_URL = import.meta.env.BASE_URL;
 ---
+
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
     <title>Dinxper FM - het swingende geluid van Dinxperlo</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href={BASE_URL + "/apple-touch-icon.png"}
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href={BASE_URL + "/favicon-32x32.png"}
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href={BASE_URL + "/favicon-16x16.png"}
+    />
+    <link rel="manifest" href={BASE_URL + "/site.webmanifest"} />
+    <link
+      rel="mask-icon"
+      href={BASE_URL + "/safari-pinned-tab.svg"}
+      color="#5bbad5"
+    />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width" />
@@ -26,8 +47,8 @@ import "@fontsource/cabin"
     </div>
   </body>
 </html>
-<style define:vars={{bgUrl: `url(${bgImage.src})`}}>
+<style define:vars={{ bgUrl: `url(${bgImage.src})` }}>
   body {
-    background-image: var(--bgUrl)
+    background-image: var(--bgUrl);
   }
 </style>
