--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,7 @@ const sponsors: Sponsor[] = [
       <li>
         <a
           class="inline-block mt-3 px-4 no-underline text-blue-700"
-          href={`${BASE_URL}uzg`}
+          href={BASE_URL + "uzg"}
           title="">Uitzending gemist?</a
         >
       </li>
