Update to Astro 2.1

--- a/src/components/Contactbar.astro
+++ b/src/components/Contactbar.astro
@@ -1,11 +1,10 @@
 ---
-const BASE_URL = import.meta.env.BASE_URL;
 ---
 
 <nav class="text-black bg-gray-100 p-2 flex justify-center">
   <ul class="flex flex-wrap">
     <li class="ml-1 mr-2">
-      <a href={BASE_URL} title="DinxperFM home page">Home page</a>
+      <a href="/" title="DinxperFM home page">Home page</a>
     </li>
     <li class="ml-1 mr-2">
       <a
