--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,8 +106,10 @@ const sponsors: Sponsor[] = [
         alt="DinxperFM logo"
         width={384}
         loading="eager"
+        decoding="auto"
         class="mx-auto"
         quality="max"
+        format="webp"
       />
 
       <p class="text-center mt-4">Het swingende geluid van Dinxperlo!</p>
@@ -145,7 +147,9 @@ const sponsors: Sponsor[] = [
       src={programmering}
       alt="DinxperFM programmering"
       loading="eager"
+      decoding="auto"
       quality="max"
+      format="webp"
     />
   </div>
   <div class="text-center">
